[gd_scene load_steps=2 format=3 uid="uid://ability_tooltip_001"]

[ext_resource type="Script" path="res://scripts/battle/ability_tooltip.gd" id="1_script"]

[node name="AbilityTooltip" type="Control"]
z_index = 100
script = ExtResource("1_script")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
color = Color(0, 0, 0, 0)

[node name="Panel" type="Panel" parent="."]
offset_left = -140.0
offset_top = 0.0
offset_right = 140.0
offset_bottom = 140.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_constants/separation = 6

[node name="Title" type="Label" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 22)
horizontal_alignment = 1
text = "Select Ability"

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 55)
theme_override_constants/separation = 8
alignment = 1

[node name="Ability1" type="Button" parent="Panel/VBox/ButtonContainer"]
custom_minimum_size = Vector2(80, 50)
text = "Strike"

[node name="Ability2" type="Button" parent="Panel/VBox/ButtonContainer"]
custom_minimum_size = Vector2(80, 50)
text = "Guard"

[node name="Ability3" type="Button" parent="Panel/VBox/ButtonContainer"]
custom_minimum_size = Vector2(80, 50)
text = "Special"

[node name="Description" type="Label" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
text = "A balanced attack."

[node name="Arrow" type="Polygon2D" parent="."]
position = Vector2(0, 140)
color = Color(0.12, 0.12, 0.18, 0.95)
polygon = PackedVector2Array(-12, 0, 12, 0, 0, 15)
